// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SwapSDK > getAssets > returns the assets based on the networkStatus API method 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "SOL",
    "chain": "Solana",
    "chainflipId": "Sol",
    "contractAddress": undefined,
    "decimals": 9,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana",
    "symbol": "SOL",
  },
  {
    "asset": "USDC",
    "chain": "Solana",
    "chainflipId": "SolUsdc",
    "contractAddress": "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the correct values for backspin 1`] = `
[
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "WBTC",
    "chain": "Ethereum",
    "chainflipId": "Wbtc",
    "contractAddress": "0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e",
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "WBTC",
    "symbol": "WBTC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0x10C6E9530F1C1AF873a391030a1D9E8ed0630D26",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdt",
    "contractAddress": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDT",
    "symbol": "USDT",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
  {
    "asset": "SOL",
    "chain": "Solana",
    "chainflipId": "Sol",
    "contractAddress": undefined,
    "decimals": 9,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana",
    "symbol": "SOL",
  },
  {
    "asset": "USDC",
    "chain": "Solana",
    "chainflipId": "SolUsdc",
    "contractAddress": "24PNhTaNtomHhoy3fTRaMhAFCRj4uHqhZEEoWrKDbR5p",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Solana",
    "chainflipId": "SolUsdt",
    "contractAddress": "8D5DryH5hA6s7Wf5AHXX19pNBwaTmMmvj4UgQGW2S8dF",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDT",
    "symbol": "USDT",
  },
  {
    "asset": "DOT",
    "chain": "Assethub",
    "chainflipId": "HubDot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub DOT",
    "symbol": "DOT",
  },
  {
    "asset": "USDT",
    "chain": "Assethub",
    "chainflipId": "HubUsdt",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Assethub",
    "chainflipId": "HubUsdc",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the correct values for mainnet 1`] = `
[
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0xdAC17F958D2ee523a2206206994597C13D831ec7",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "WBTC",
    "chain": "Ethereum",
    "chainflipId": "Wbtc",
    "contractAddress": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
    "decimals": 8,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "WBTC",
    "symbol": "WBTC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0x826180541412D574cf1336d22c0C0a287822678A",
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": true,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0xaf88d065e77c8cC2239327C5EDb3A432268e5831",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdt",
    "contractAddress": "0xFd086bC7CD5C481DCC9C85ebE478A1C0b69FCbb9",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDT",
    "symbol": "USDT",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
  {
    "asset": "SOL",
    "chain": "Solana",
    "chainflipId": "Sol",
    "contractAddress": undefined,
    "decimals": 9,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana",
    "symbol": "SOL",
  },
  {
    "asset": "USDC",
    "chain": "Solana",
    "chainflipId": "SolUsdc",
    "contractAddress": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Solana",
    "chainflipId": "SolUsdt",
    "contractAddress": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDT",
    "symbol": "USDT",
  },
  {
    "asset": "DOT",
    "chain": "Assethub",
    "chainflipId": "HubDot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub DOT",
    "symbol": "DOT",
  },
  {
    "asset": "USDT",
    "chain": "Assethub",
    "chainflipId": "HubUsdt",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Assethub",
    "chainflipId": "HubUsdc",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the correct values for perseverance 1`] = `
[
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0x27CEA6Eb8a21Aae05Eb29C91c5CA10592892F584",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "WBTC",
    "chain": "Ethereum",
    "chainflipId": "Wbtc",
    "contractAddress": "b060796D171EeEdA5Fb99df6B2847DA6D4613CAd",
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "WBTC",
    "symbol": "WBTC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xdC27c60956cB065D19F08bb69a707E37b36d8086",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdt",
    "contractAddress": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDT",
    "symbol": "USDT",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
  {
    "asset": "SOL",
    "chain": "Solana",
    "chainflipId": "Sol",
    "contractAddress": undefined,
    "decimals": 9,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana",
    "symbol": "SOL",
  },
  {
    "asset": "USDC",
    "chain": "Solana",
    "chainflipId": "SolUsdc",
    "contractAddress": "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Solana",
    "chainflipId": "SolUsdt",
    "contractAddress": "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDT",
    "symbol": "USDT",
  },
  {
    "asset": "DOT",
    "chain": "Assethub",
    "chainflipId": "HubDot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub DOT",
    "symbol": "DOT",
  },
  {
    "asset": "USDT",
    "chain": "Assethub",
    "chainflipId": "HubUsdt",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Assethub",
    "chainflipId": "HubUsdc",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the correct values for sisyphos 1`] = `
[
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0x27CEA6Eb8a21Aae05Eb29C91c5CA10592892F584",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "WBTC",
    "chain": "Ethereum",
    "chainflipId": "Wbtc",
    "contractAddress": "b060796D171EeEdA5Fb99df6B2847DA6D4613CAd",
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "WBTC",
    "symbol": "WBTC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdt",
    "contractAddress": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDT",
    "symbol": "USDT",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
  {
    "asset": "SOL",
    "chain": "Solana",
    "chainflipId": "Sol",
    "contractAddress": undefined,
    "decimals": 9,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana",
    "symbol": "SOL",
  },
  {
    "asset": "USDC",
    "chain": "Solana",
    "chainflipId": "SolUsdc",
    "contractAddress": "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDC",
    "symbol": "USDC",
  },
  {
    "asset": "USDT",
    "chain": "Solana",
    "chainflipId": "SolUsdt",
    "contractAddress": "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDT",
    "symbol": "USDT",
  },
  {
    "asset": "DOT",
    "chain": "Assethub",
    "chainflipId": "HubDot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub DOT",
    "symbol": "DOT",
  },
  {
    "asset": "USDT",
    "chain": "Assethub",
    "chainflipId": "HubUsdt",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Assethub",
    "chainflipId": "HubUsdc",
    "contractAddress": undefined,
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Assethub USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the deposit assets based on the networkStatus API method 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "SOL",
    "chain": "Solana",
    "chainflipId": "Sol",
    "contractAddress": undefined,
    "decimals": 9,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana",
    "symbol": "SOL",
  },
  {
    "asset": "USDC",
    "chain": "Solana",
    "chainflipId": "SolUsdc",
    "contractAddress": "4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Solana USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the destination assets based on the networkStatus API method 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the filtered assets for the chain 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`SwapSDK > getAssets > returns the filtered destination assets for the chain 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`SwapSDK > getAssets > throws when requesting an unsupported chain 1`] = `[Error: unsupported source chain "Dogecoin"]`;

exports[`SwapSDK > getBoostLiquidity > returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc 1`] = `
[
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 10,
  },
]
`;

exports[`SwapSDK > getBoostLiquidity > returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc filtered by asset and sorted descending 1`] = `
[
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 20,
  },
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 10,
  },
]
`;

exports[`SwapSDK > getBoostLiquidity > returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc filtered by tier & asset 1`] = `
[
  {
    "asset": "ETH",
    "availableAmount": 100000n,
    "chain": "Ethereum",
    "feeTierBps": 10,
  },
]
`;

exports[`SwapSDK > getBoostLiquidity > returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc filtered by tier 1`] = `
[
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 10,
  },
  {
    "asset": "ETH",
    "availableAmount": 100000n,
    "chain": "Ethereum",
    "feeTierBps": 10,
  },
]
`;

exports[`SwapSDK > getChains > returns all filtered destination chains for the chain 1`] = `
[
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK > getChains > returns filtered destination destination chains for the chain 1`] = `
[
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
]
`;

exports[`SwapSDK > getChains > returns the chains based on the supportedAsset API endpoint 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 11155111,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK > getChains > returns the correct values for backspin 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 10997,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 412346,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Assethub",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Assethub",
    "requiredBlockConfirmations": undefined,
  },
]
`;

exports[`SwapSDK > getChains > returns the correct values for mainnet 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 1,
    "isMainnet": true,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": true,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 42161,
    "isMainnet": true,
    "maxRetryDurationBlocks": 10,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": true,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Assethub",
    "evmChainId": undefined,
    "isMainnet": true,
    "maxRetryDurationBlocks": 10,
    "name": "Assethub",
    "requiredBlockConfirmations": undefined,
  },
]
`;

exports[`SwapSDK > getChains > returns the correct values for perseverance 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 11155111,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 421614,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Assethub",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Assethub",
    "requiredBlockConfirmations": undefined,
  },
]
`;

exports[`SwapSDK > getChains > returns the correct values for sisyphos 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 11155111,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 421614,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Assethub",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Assethub",
    "requiredBlockConfirmations": undefined,
  },
]
`;

exports[`SwapSDK > getChains > returns the deposit chains based on the supportedAsset API endpoint 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 11155111,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK > getChains > returns the destination chains based on the supportedAsset API endpoint 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 11155111,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
]
`;

exports[`SwapSDK > getChains > returns the filtered destination chains for the chain 1`] = `
[
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 421614,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Solana",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Solana",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Assethub",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Assethub",
    "requiredBlockConfirmations": undefined,
  },
]
`;

exports[`SwapSDK > getChains > throws when requesting an unsupported chain 1`] = `[Error: unsupported source chain "Dogecoin"]`;

exports[`SwapSDK > getSwapLimits > returns the swap limits based on the environment rpc 1`] = `
{
  "maximumSwapAmounts": {
    "Arbitrum": {
      "ETH": null,
      "USDC": null,
      "USDT": null,
    },
    "Assethub": {
      "DOT": null,
      "USDC": null,
      "USDT": null,
    },
    "Bitcoin": {
      "BTC": 1152921504606846976n,
    },
    "Ethereum": {
      "ETH": null,
      "FLIP": null,
      "USDC": 1152921504606846976n,
      "USDT": null,
      "WBTC": null,
    },
    "Solana": {
      "SOL": null,
      "USDC": null,
      "USDT": null,
    },
  },
  "minimumSwapAmounts": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
      "WBTC": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
  },
}
`;
